--- a/Mypage_mycal.html
+++ b/Mypage_mycal.html
@@ -119,10 +119,10 @@
                                     <p class="schNicK">닉네임</p>
                                 </div>
                                 <div class="schDays">
-                                    <span>여행기간&nbsp;&nbsp;<span class="days">5일</span></span>
-                                    <span class="subTxt">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
                                         23-08-01 ~ 23-08-06
-                                    </span>
+                                    </p>
                                 </div>
                             </div>
                             <div class="schBottom">
@@ -133,6 +133,121 @@
                                 <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
                             </div>
                         </div>
+                        <div class="schOne">
+                            <div class="schInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <p class="schNicK">닉네임</p>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+                        </div>
+                        <div class="schOne">
+                            <div class="schInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <p class="schNicK">닉네임</p>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+                        </div>
+                        <div class="schOne">
+                            <div class="schInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <p class="schNicK">닉네임</p>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+                        </div>
+                        <div class="schOne">
+                            <div class="schInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <p class="schNicK">닉네임</p>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+                        </div>
+                        <div class="schOne">
+                            <div class="schInfo">
+                                <div class="schUser">
+                                    <img src="./source/profImg1.jpg">
+                                    <p class="schNicK">닉네임</p>
+                                </div>
+                                <div class="schDays">
+                                    <p>여행기간&nbsp;&nbsp;<span class="days">5일</span></p>
+                                    <p class="schDate">
+                                        23-08-01 ~ 23-08-06
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="schBottom">
+                                <div>
+                                    <img src="./source/loc.png" class="locIco">
+                                    <span class="schLoc">울란바토르</span>
+                                </div>
+                                <a href="./Community_SchDetail.html" class="detailBtn">일정 상세보기</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pagination">
+                        <button type="button" class="prevBtn pageBtn"></button>
+                        <button type="button" value="" class="pageNum active">1</button>
+                        <button type="button" value="" class="pageNum">2</button>
+                        <button type="button" value="" class="pageNum">3</button>
+                        <button type="button" value="" class="pageNum">4</button>
+                        <button type="button" value="" class="pageNum">5</button>
+                        <button type="button" class="nextBtn pageBtn"></button>
                     </div>
                 </div>
             </div>
