--- a/adm_calendar.html
+++ b/adm_calendar.html
@@ -62,6 +62,7 @@
                 <h3><span>8월 21일</span> 판매 리스트</h3>
                 
                 <ul class="listHead listRow">
+                    <li>구매시간</li>
                     <li>판매 상품</li>
                     <li>여행위치</li>
                     <li>판매 가격</li>
@@ -70,6 +71,7 @@
                 </ul>
                 <div class="saleListAll">
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[일본 오사카] 유니버셜 스튜디오 재팬 익스프레스 패스</li>
                         <li>일본 - 오사카</li>
                         <li>159,000</li>
@@ -77,6 +79,7 @@
                         <li>477,000</li>
                     </ul>
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[베트남 호치민] 🌇 Ho Chi Minh City tour in 1 Day </li>
                         <li>베트남 - 호치민</li>
                         <li>159,000</li>
@@ -84,6 +87,7 @@
                         <li>1,477,000</li>
                     </ul>
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[베트남 나트랑] 나트랑과 빈히 베이데이 투어</li>
                         <li>베트남 - 나트랑나트랑나트랑</li>
                         <li>99,000</li>
@@ -91,6 +95,7 @@
                         <li>297,000</li>
                     </ul>
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[일본 오사카] 유니버셜 스튜디오 재팬 익스프레스 패스</li>
                         <li>일본 - 오사카</li>
                         <li>159,000</li>
@@ -98,6 +103,7 @@
                         <li>477,000</li>
                     </ul>
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[베트남 호치민] 🌇 Ho Chi Minh City tour in 1 Day </li>
                         <li>베트남 - 호치민</li>
                         <li>159,000</li>
@@ -105,6 +111,7 @@
                         <li>477,000</li>
                     </ul>
                     <ul class="listRow">
+                        <li>18:09:59</li>
                         <li>[베트남 나트랑] 나트랑과 빈히 베이데이 투어</li>
                         <li>베트남 - 나트랑나트랑나트랑</li>
                         <li>99,000</li>
