--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -43,8 +43,8 @@
                     </li>
                 </ul>
                 <div class="userHead">
-                    <a href="#"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
+                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li><a href="./Community_Group.html">마이페이지</a></li>
@@ -75,10 +75,13 @@
 
                 <div class="postCon">
                     <p class="postText">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil deleniti
-                        quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit quidem
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde iste officia expedita nihil
+                        deleniti
+                        quas laboriosam voluptatum aliquam corrupti saepe nostrum amet aliquid, quod odio vitae sit
+                        quidem
                         quasi ipsum.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium rem
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nostrum doloremque, laudantium
+                        rem
                         rerum provident quo commodi itaque odio magnam necessitatibus optio quam. Dolore consequuntur
                         sapiente, ea nulla voluptatibus ex!
                     </p>
@@ -138,6 +141,14 @@
                 <div class="rightWrap">
                     <div class="calendar"></div>
 
+                    <style>
+                        .calendar th:nth-child(1) span {
+                            color: var(--color-main);
+                            font-family: pSemi;
+                        }
+
+                    </style>
+
                     <p class="saleTxt">요일별 금액현황</p>
                     <div class="saleInfo">
                         <div class="sRow sHead">
@@ -164,7 +175,7 @@
                                 <span class="plus numBtn">+</span>
                             </div>
                         </div>
-    
+
                         <div class="payInfo">
                             <span>필수 유의 사항</span>
                             <p>
@@ -177,8 +188,10 @@
                 </div>
 
                 <button type="button" class="goPay">
-                    <span>479,000</span>
-                    <span>원 결제하기</span>
+                    <a href="./Store_Pay.html">
+                        <span>479,000</span>
+                        <span>원 결제하기</span>
+                    </a>
                 </button>
             </div>
         </div>
@@ -197,7 +210,7 @@
     <script src="./js/sDetail.js"></script>
 
     <script>
-        
+
     </script>
 </body>
 
