--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -36,12 +36,12 @@
                         <a href="./Store.html"  class="store">여행상점</a>
                     </li>
                     <li>
-                        <a href="#"  class="community">커뮤니티</a>
+                        <a href="./Community_Group.html"  class="community">커뮤니티</a>
                     </li>
                 </ul>
                 <div class="userHead">
-                    <a href="#"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="#"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
+                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li><a href="./Community_Group.html">마이페이지</a></li>
