--- a/Mypage_mybill.html
+++ b/Mypage_mybill.html
@@ -57,10 +57,11 @@
             <div class="myInner">
                 <div class="mypageGnb">
                     <div class="mlInner">
-                        <div class="mproname">
-                            <img src="./source/profImg2.jpg" alt="">
-                            <span>user name</span>
-                        </div>
+                        <a href="./Mypage_mymain.html" class="mproname menuin">
+                            <img class="mypimg" src="./source/profImg2.jpg" alt="">
+                            <span>신혜원</span>
+                            <div class="lvflag"><img src="./source/Lv_9.png" alt=""></div>
+                        </a>
                         <ul>
                             <li>
                                 <div class="menuin  pointbox">
