--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="./css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/slick_theme.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
@@ -1009,6 +1010,8 @@
                 behavior: 'smooth'
             });
         }
+
+        
     </script>
 </body>
 
