--- a/Store_Detail.html
+++ b/Store_Detail.html
@@ -27,12 +27,13 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
@@ -109,13 +110,13 @@
                             <span>유저 이름</span>
                             <span>@uesrId0101</span>
                             <button type="button" class="commDel">삭제</button>
+                            <span class="cmmtDate">2023-08-10</span>
                             <p class="cmmtCon">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Sapiente repellendus eveniet sint maiores.
                             </p>
                         </div>
                     </div>
-                    <span class="cmmtDate">2023-08-10</span>
                 </div>
 
                 <div class="comment">
@@ -125,13 +126,13 @@
                             <span>유저 이름</span>
                             <span>@uesrId0101</span>
                             <button type="button" class="commDel">삭제</button>
+                            <span class="cmmtDate">2023-08-10</span>
                             <p class="cmmtCon">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Sapiente repellendus eveniet sint maiores.
                             </p>
                         </div>
                     </div>
-                    <span class="cmmtDate">2023-08-10</span>
                 </div>
 
             </div>
