--- a/Community_Group.html
+++ b/Community_Group.html
@@ -23,12 +23,13 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/cGroup.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
@@ -71,7 +72,7 @@
                 </form>
                 <button type="button" class="sortBtn">조회순</button>
             </div>
-            <a href="./Community_WriteGrp.html" class="postBtn">작성하기</a>
+            <a href="./Community_WriteGro.html" class="postBtn">작성하기</a>
         </div>
 
         <div class="schAll">
