--- a/store.html
+++ b/store.html
@@ -25,12 +25,13 @@
     <link href="./css/store.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/slick_theme.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
