--- a/Mypage_mymain.html
+++ b/Mypage_mymain.html
@@ -23,12 +23,13 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/mypage.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
@@ -59,8 +60,10 @@
                     <div class="mlInner">
                         <a href="./Mypage_mymain.html" class="mproname menuin">
                             <img class="mypimg" src="./source/profImg2.jpg" alt="">
-                            <span>신혜원</span>
-                            <div class="lvflag"><img src="./source/Lv_9.png" alt=""></div>
+                            <div class="nameflag">
+                                <span>신혜원</span>
+                                <div class="lvflag"><img src="./source/Lv_9.png" alt=""></div>
+                            </div>
                         </a>
                         <ul>
                             <li>
