--- a/adm_calendar.html
+++ b/adm_calendar.html
@@ -23,13 +23,14 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/adCalendar.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./main.html"><img class="headLogo" src="./source/logo.png"></a>
+            <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
