--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -93,7 +93,15 @@
 
             <div class="itemInfo">
                 <div class="itemInfoInner">
-                    <h1>결제하기</h1>
+                    <div class="infoTop">
+                        <h1>결제하기</h1>
+                        <span>
+                            <input type="radio" name="lang" id="langKor" class="lBtn">
+                            <label for="langKor"></label>
+                            <input type="radio" name="lang" id="langUs" class="lBtn">
+                            <label for="langUs"></label>
+                        </span>
+                    </div>
                     <p class="ment">꼭 확인해주세요</p>
                     <div class="itemThumb">
                         <div class="imgWrap">
